infra/glance/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - name: http
      port: 80
      targetPort: http
